atualizados alguns links da página quem-somos e o conteúdo da página seja-monitor

--- a/pages/quem-somos.html
+++ b/pages/quem-somos.html
@@ -230,14 +230,17 @@
         <p>
           Após a experiência em 2020 e o engajamento dos alunos no projeto. Em 
           2021 foi aprovado no GMA o projeto de monitoria interdepartamental
-          Recursos Educacionais Digitais para o ensino de MATemática (REDMAT). As 
-          atribuições dos monitores seria preferencialmente a de auxiliar na 
-          elaboração de plataformas de aprendizagens comuns a todos os departamentos 
-          que integrem textos, recursos computacionais,
-          videoaulas, laboratórios, jogos e materiais pedagógicos para qualquer
-          disciplina do IME. O projeto, por ser interdepartamental, visa sempre
-          trabalhar na homogeneização dos conteúdos das diversas disciplinas e 
-          integração de equipes interdepartamentais. <a href="pages/proj-ensino"> 
+          Recursos Educacionais Digitais para o ensino de MATemática (REDMAT). A 
+          atribuição preferencial dos monitores seria a de auxiliar os professores na 
+          elaboração de plataformas de aprendizagens comuns a todos os departamentos. 
+          O objetivo é que estas plataformas integrem textos, recursos computacionais,
+          videoaulas, oficinas, tutoriais, jogos e materiais pedagógicos para qualquer
+          disciplina do IME com um grande número de alunos matriculados. O projeto, 
+          por ser interdepartamental, visa sempre trabalhar na homogeneização dos 
+          conteúdos das diversas disciplinas e integração de equipes interdepartamentais. Desde
+          2021, os monitores vem atuando em vários projetos de ensino do IME trabalhando de 
+          perto com várias equipes de professores. 
+          <a href="../pages/proj-ensino.html"> 
             <em>Confira os projetos de ensino envolvidos!!</em></a>
         </p>
 
@@ -245,15 +248,17 @@
           Também em 2021 foi criada a ação REDMAT-Extensão dentro do Programa de 
           extensão Dá Licença da UFF com o intuito de levar a experiência para as escolas 
           da rede básica. <a href="https://dalicenca.uff.br/"><em>Acesse o site do Programa Dá Licença!!</em></a>
+          Em 2023 o programa Dá Lincença disponibilizou um pequeno laboratório com dois computadores
+          para os monitores desenvolverem suas atividades.
         </p>
 
         <p>
           Em 2024 o projeto de monitoria REDMAT virou permanente e a ação 
-          REDMAT-Extensão virou projeto de extensão próprio dentro do Programa Dá Licença. 
+          REDMAT-Extensão virou projeto de extensão próprio, ainda associado ao Programa Dá Licença. 
           Com este grande passo se consolida um marco de trabalho conjunto entre vários 
           professores do IME e alunos de diversos cursos de graduação da área de exatas. 
           Abriou-se então uma ampla estrada para pesquisa, ensino e extensão envolvendo 
-          tecnologias de ensino. <a href="pages/quem-somos.html#famredmat"> 
+          tecnologias de ensino. <a href="../pages/quem-somos.html#famredmat"> 
           <em>Confira nossas equipes!!</em></a>
         </p> 
         <p></p>     
