--- a/pages/seja-monitor.html
+++ b/pages/seja-monitor.html
@@ -18,10 +18,14 @@
     <main>
       <section class="sobre">
         <div class="box-sobre">
-          <h1>Seja Membro</h1>
+          <h1>Seja monitor</h1>
           <p>
-            Para ser membro do projeto REDMat, basta ser aluno regularmente
-            matriculado na UFF e participar do processo seletivo.
+            Para ser membro do projeto REDMAT-Monitoria, basta ser aluno regularmente
+            matriculado na UFF e participar de um processo seletivo. Os mesmos costumam
+            acontecer no início do primeiro semestre de cada ano e oferecem tanto vagas
+            com bolsa como vagas de monitoria voluntária (sem bolsa). Dependendo da 
+            disponibilidade das bolsas e demanda de vagas de monitoria voluntária, poderá
+            ser aberto outro processo seletivo a qualquer momento do ano. <br/>
           </p>
           <div class="apenas-desktop">
             <h2>Conheça mais sobre o projeto</h2>
@@ -39,7 +43,7 @@
         </div>
       </section>
       <section class="content">
-        <h2>Benefícios ao Tornar-se um Monitor REDMat</h2>
+        <h2>Benefícios ao Tornar-se um Monitor REDMAT</h2>
         <p>
           Você poderá desfrutar de experiências enriquecedoras em várias áreas,
           colaborando ativamente para integrar conhecimento com outros membros
@@ -76,24 +80,35 @@
 
         <h3>Como é a prova de acesso?</h3>
         <p>
-          Somente precisa esperar abrir um processo seletivo, se inscrever e
-          produzir dois vídeos, um com Geogebra e outro sem Geogebra. Os
-          classificados farão uma entrevista com a banca. Se você não lidar
-          muito bem com gravação/edição de vídeo ou com o programa Geogebra, não
-          se preocupe. Você aprenderá durante sua estadia conosco!! Somente
-          precisamos entender seu nível de conhecimento da matéria da disciplina
-          e das tecnologias básicas para atuar no projeto.
+          Somente precisa esperar abrir um processo seletivo, se inscrever no 
+          <a href="https://app.uff.br/monitoria/"> 
+            <em>sistema de monitoria da UFF</em></a> e preencher um formulário 
+          disponibilizado no mesmo edital. <br/>
+          No formulário você deverá escolher uma das
+          disciplinas oferecidas no edital, anexar alguma documentação como histórico e 
+          curriculo pessoal. Capriche no curriculo! Finalmente, você deverá anexar
+          também uma vídeo-aula, de sua autoria, explicando algum conteúdo da sua preferência.
+          Você deverá usar na podução o programa Geogebra e toda a tecnologia de ensino 
+          que você conheça. Aqui é onde você deve mostrar seus conhecimentos de tecnologia 
+          e como você os aplica para o ensino. A banca precisa avaliar seu nível de conhecimento 
+          na disciplina e das tecnologias básicas para atuar no projeto. Seja caprichoso!<br/>
+          Os alunos deferidos farão uma entrevista com a banca. <br/> 
+          Se você ainda não é muito costumado com gravação/edição de vídeo, 
+          com o programa Geogebra, ou com outras tecnologias, não
+          se preocupe, ainda poderia ser classificado. Você aprenderá todo o que
+          precisar durante sua estadia conosco!! 
         </p>
 
         <h3>Como nasceu o projeto?</h3>
         <p>
-          O projeto de monitoria REDMat (Recursos Educacionais Digitais para o
+          O projeto de monitoria REDMAT (Recursos Educacionais Digitais para o
           ensino da Matemática) nasceu em 2021 a partir de iniciativas de várias
           equipes de docentes do IME que já estavam atuando em projetos de
           ensino e orientando bolsistas de programas de apoio acadêmico
-          decorrentes da pandemia Covid19.
+          decorrentes da pandemia Covid19. Acesse a página <a href="../pages/quem-somos.html"> 
+            <em>Quem somos</em></a> e conheça nossa história!
         </p>
-
+        <!-- Não acho necessário
         <hr />
         <h2>Como se tornar membro</h2>
         <p class="comentario">
@@ -104,7 +119,7 @@
           nesciunt nulla commodi nisi, debitis totam, facere distinctio voluptas
           voluptatibus tempore possimus magnam similique. Iste, beatae placeat.
           Odio, quaerat accusamus!
-        </p>
+        </p> -->
       </section>
     </main>
 
