Adição de contador de visitas (não exibido)

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
       <section class="sobre">
         <!-- 1.1 Descrição do projeto na Área Especial -->
         <div class="box-sobre">
+
+          <!-- Contador e Estatística de Visitas -->
+          <a href="https://www.webcontadores.com/geozoom.php?c=jxhk7tsaz4al2m5jpa5k4tahagekpsx7&base=counter11&type_clic=0">
+            <div style="display: hidden; width: 0px; position: absolute; top: -100%;">
+              <div style="display: hidden; width: 0px;" id="sfcjxhk7tsaz4al2m5jpa5k4tahagekpsx7"></div>
+              <script type="text/javascript" src="https://counter11.optistats.ovh/private/counter.js?c=jxhk7tsaz4al2m5jpa5k4tahagekpsx7&down=async" async></script>  
+            </div>
+          </a>
+          
           <h2>Sobre o Projeto</h2>
           <p>
             <!--REDMAT (Recursos Educacionais Digitais para o
