Contador visível e próximo ao rodapé

--- a/index.html
+++ b/index.html
@@ -30,14 +30,6 @@
       <section class="sobre">
         <!-- 1.1 Descrição do projeto na Área Especial -->
         <div class="box-sobre">
-
-          <!-- Contador e Estatística de Visitas -->
-          <a href="https://www.webcontadores.com/geozoom.php?c=jxhk7tsaz4al2m5jpa5k4tahagekpsx7&base=counter11&type_clic=0">
-            <div style="display: hidden; width: 0px; position: absolute; top: -100%;">
-              <div style="display: hidden; width: 0px;" id="sfcjxhk7tsaz4al2m5jpa5k4tahagekpsx7"></div>
-              <script type="text/javascript" src="https://counter11.optistats.ovh/private/counter.js?c=jxhk7tsaz4al2m5jpa5k4tahagekpsx7&down=async" async></script>  
-            </div>
-          </a>
           
           <h2>Sobre o Projeto</h2>
           <p>
@@ -184,6 +176,18 @@
             </div>
           </div>
         </div>
+
+
+            <!-- Contador e Estatística de Visitas -->
+            <!-- Descomente a linha abaixo para esconder o contador -->
+            <!-- <div style="display: hidden; width: 0px; position: absolute; top: -100%;"> -->
+              <div>
+                <h4>Contador de Visitas</h4>
+                <a href="https://www.webcontadores.com/geozoom.php?c=jxhk7tsaz4al2m5jpa5k4tahagekpsx7&base=counter11&type_clic=0">
+                  <div style="display: hidden; width: 0px;" id="sfcjxhk7tsaz4al2m5jpa5k4tahagekpsx7"></div>
+                  <script type="text/javascript" src="https://counter11.optistats.ovh/private/counter.js?c=jxhk7tsaz4al2m5jpa5k4tahagekpsx7&down=async" async></script>  
+                </a>
+              </div>
 
       </section>
 
@@ -448,9 +452,12 @@
 
 
       </section>
+
     </main>
 
     <footer></footer>
+
+
 
     <script src="assets/js/insere-header.js"></script>
     <script src="assets/js/menu.js"></script>
